--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      });
   });
   function submmit() {
-   alert("感謝你的寶貴意見!");
+   alert("繼續支持湖人吧~~!");
   }	
   function idk() {
    alert("自己慢慢看吧");
@@ -47,7 +47,7 @@
    <h3>留言板</h3>
    <p><input type="text" name="name" id="input1" placeholder="你最愛的湖人球員"></p>
    <p><textarea rows="6" cols="21" style="font-size:24px" placeholder="在這裡輸入你為甚麼喜歡"></textarea></p>
-   <button onclick="submmit()" style="font-size:20px">繼續支持湖人吧~~</button>
+   <button onclick="submmit()" style="font-size:20px">送出</button>
    <button onclick="idk()" style="font-size:20px">預測明年冠軍</button>
   </div>
  </form>      
